<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <com.pasc.lib.widget.toolbar.PascToolbar
        android:id="@+id/ctv_title"
        app:support_translucent_status_bar="true"
        app:title="@string/business_user_add_address"
        android:background="@color/white_ffffff"
        style="@style/BlackFontToolbar" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_e8e8e8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/white_ffffff"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="@dimen/dp_90.0"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_15.0"
            android:gravity="center_vertical"
            android:text="@string/mine_contact"
            android:textColor="@color/black_333333"
            android:textSize="17sp" />

        <com.pasc.lib.widget.ClearEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_15.0"
            android:layout_marginRight="@dimen/dp_15.0"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/mine_name"
            android:cursorVisible="true"
            android:singleLine="true"
            android:textColor="@color/black_333333"
            android:textColorHint="@color/gray_c7c7c7"
            android:textSize="17sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_e8e8e8"
            android:layout_marginLeft="@dimen/dp_15.0"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/white_ffffff"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="@dimen/dp_90.0"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_15.0"
            android:gravity="center_vertical"
            android:text="@string/mine_phone"
            android:textColor="@color/black_333333"
            android:textSize="17sp" />

        <com.pasc.lib.widget.ClearEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_15.0"
            android:layout_marginRight="@dimen/dp_15.0"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/mine_pls_enter_cell"
            android:inputType="number"
            android:cursorVisible="true"
            android:maxLength="13"
            android:maxLines="1"
            android:textColor="@color/black_333333"
            android:textColorHint="@color/gray_c7c7c7"
            android:textSize="17sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10.0"
        android:background="@color/default_bg"
        />

    <LinearLayout
        android:id="@+id/ll_area"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/white_ffffff"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_area"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_15.0"
            android:background="@color/white_ffffff"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/mine_region"
            android:textColor="@color/black_333333"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_choose_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/white_ffffff"
            android:drawableRight="@drawable/mine_ic_item_arrow_right"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textColorHint="@color/gray_c7c7c7"
            android:hint="@string/mine_region_belong"
            android:paddingLeft="@dimen/dp_15.0"
            android:paddingRight="@dimen/dp_15.0"
            android:textColor="@color/black_333333"
            android:textSize="17sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_e8e8e8"
            android:layout_marginLeft="@dimen/dp_15.0"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_address_detail"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@color/white_ffffff"
            android:gravity="top"
            android:text="@string/mine_detailed_addr"
            android:lines="3"
            android:paddingBottom="@dimen/dp_13.0"
            android:paddingLeft="@dimen/dp_15.0"
            android:paddingTop="@dimen/dp_13.0"
            android:textColor="@color/black_333333"
            android:textSize="17sp"
            />
        <com.pasc.lib.widget.ClearEditText
            android:id="@+id/et_address"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/white_ffffff"
            android:gravity="top"
            android:hint="@string/mine_addr_hint"
            android:lines="3"
            android:paddingBottom="@dimen/dp_13.0"
            android:paddingLeft="@dimen/dp_30.0"
            android:paddingRight="@dimen/dp_15.0"
            android:paddingTop="@dimen/dp_13.0"
            android:maxLength="150"
            android:textColor="@color/black_333333"
            android:textColorHint="@color/gray_c7c7c7"
            android:textSize="17sp" />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_e8e8e8"
            android:layout_marginLeft="@dimen/dp_15.0"/>
    </FrameLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
    <TextView
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:background="@color/white_ffffff"
        android:gravity="top"
        android:text="@string/mine_zcode"
        android:paddingBottom="@dimen/dp_13.0"
        android:paddingLeft="@dimen/dp_15.0"
        android:paddingTop="@dimen/dp_13.0"
        android:textColor="@color/black_333333"
        android:textSize="17sp"
        />
    <com.pasc.lib.widget.ClearEditText
        android:id="@+id/et_zcode"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@color/white_ffffff"
        android:gravity="top"
        android:hint="@string/pls_enter_zcode"
        android:lines="1"
        android:singleLine="true"
        android:paddingBottom="@dimen/dp_13.0"
        android:paddingLeft="@dimen/dp_30.0"
        android:paddingRight="@dimen/dp_15.0"
        android:paddingTop="@dimen/dp_13.0"
        android:maxLength="6"
        android:textColor="@color/black_333333"
        android:textColorHint="@color/gray_c7c7c7"
        android:inputType="number"
        android:textSize="17sp" />
  </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_set_default_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10.0"
        android:background="@color/white_ffffff"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_15.0"
            android:gravity="center_vertical"
            android:text="@string/mine_set_default_addr"
            android:textColor="@color/black_333333"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/iv_in_app_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingRight="@dimen/dp_20"
            android:scaleType="fitEnd"
            android:src="@drawable/mine_ic_user_switch_off" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_delete_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_10.0"
        android:background="@color/white_ffffff"
        android:gravity="center"
        android:text="@string/mine_delete_addr"
        android:visibility="gone"
        android:textColor="@color/red_ff4d4f"
        android:textSize="17sp" />


    <TextView
        android:id="@+id/tv_save_address"
        android:layout_width="@dimen/dp_295.0"
        android:layout_height="@dimen/dp_50"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30.0"
        android:background="@drawable/mine_login_login_ok_bg"
        android:gravity="center"
        android:text="@string/mine_save"
        android:visibility="gone"
        android:textColor="@color/white_ffffff"
        android:textSize="17sp" />

</LinearLayout>
