<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/about_bg_color">

    <com.pasc.lib.widget.toolbar.PascToolbar
        android:id="@+id/common_about_title"
        style="@style/WhiteFontToolbar"
        android:background="@color/white"
        app:back_icon="@drawable/temp_ic_back"
        app:enable_under_divider="true"
        app:support_translucent_status_bar="false"
        app:title="@string/business_mine_about_us"
        app:title_text_color="@color/black_333333"
        app:under_divider_color="@color/gray_d5d5d5" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/riv_icon"
        android:layout_width="@dimen/dp_80.0"
        android:layout_height="@dimen/dp_80.0"
        android:layout_below="@+id/common_about_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/mine_about_icon"
        app:riv_mutate_background="true"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/riv_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/text_size_17" />

    <TextView
        android:layout_marginBottom="@dimen/dp_30"
        android:id="@+id/tv_about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textColor="@color/gray_969696"
        android:textSize="@dimen/text_size_15"
        tools:text="@string/business_mine_current_version" />


    <LinearLayout
        android:id="@+id/ll_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_about_version"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/rl_check_version"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_alignParentStart="true"
            android:background="@drawable/mine_selector_item_common"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_check_version"
                style="@style/BaseSettingTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_gravity="left|center"
                android:clickable="false"
                android:text="版本检测" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right|center"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_update_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/mine_no_new_version"
                    android:textColor="@color/gray_999999" />

                <ImageView
                    android:id="@+id/iv_red_dot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mine_red_dot"
                    android:layout_marginBottom="@dimen/dp_6"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/iv_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="15.5dp"
                    android:src="@drawable/mine_ic_item_arrow_right" />

            </LinearLayout>
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_line_width"
            android:layout_marginLeft="19dp"
            android:background="@color/gray_d5d5d5" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_protocol"
        style="@style/SettingTextViewStyle"
        android:layout_below="@+id/ll_version"
        android:background="@drawable/mine_selector_item_common"
        android:text="服务协议" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_line_width"
        android:layout_marginLeft="19dp"
        android:id="@+id/service_divider"
        android:layout_below="@id/tv_protocol"
        android:background="@color/gray_d5d5d5" />
    <TextView
        android:id="@+id/tv_private_policy"
        style="@style/SettingTextViewStyle"
        android:layout_below="@+id/service_divider"
        android:background="@drawable/mine_selector_item_common"
        android:text="@string/business_mine_private_policy" />
    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_30"
        android:gravity="center"
        android:text="@string/mine_about_copyright"
        android:textColor="@color/gray_969696"
        android:textSize="@dimen/text_size_12" />


</RelativeLayout>