<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg"
    android:orientation="vertical"
    >
  <com.pasc.lib.widget.toolbar.PascToolbar
      android:id="@+id/ctv_title"
      android:background="@color/white"
      app:back_icon="@drawable/temp_ic_back"
      app:enable_under_divider="true"
      app:support_translucent_status_bar="false"
      app:title="设置"
      app:title_text_color="@color/black_333333"
      app:under_divider_color="@color/gray_d5d5d5"
      style="@style/WhiteFontToolbar"
      />

  <LinearLayout
      android:id="@+id/ll_logined"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/white_ffffff"
      android:divider="@drawable/mine_user_divider_line"
      android:orientation="vertical"
      android:paddingLeft="19dp"
      android:showDividers="middle"
      >

    <TextView
        android:id="@+id/tv_user_info"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableRight="@drawable/mine_ic_item_arrow_right"
        android:gravity="center_vertical"
        android:paddingRight="15.5dp"
        android:text="用户资料"
        android:textColor="@color/setting_item_left_color"
        android:textSize="@dimen/text_size_17"
        />
    <TextView
        android:id="@+id/tv_account_safety"
        android:layout_width="match_parent"
        android:layout_height="49.5dp"
        android:drawableRight="@drawable/mine_ic_item_arrow_right"
        android:gravity="center_vertical"
        android:paddingRight="15.5dp"
        android:text="账户安全"
        android:textColor="@color/setting_item_left_color"
        android:textSize="@dimen/text_size_17"
        />
    <TextView
        android:id="@+id/tv_pwd_reset"
        android:layout_width="match_parent"
        android:layout_height="49.5dp"
        android:drawableRight="@drawable/mine_ic_item_arrow_right"
        android:gravity="center_vertical"
        android:paddingRight="15.5dp"
        android:text="@string/business_mine_pwd_reset"
        android:textColor="@color/setting_item_left_color"
        android:textSize="@dimen/text_size_17"
        />
    <TextView
        android:id="@+id/tv_permission"
        android:layout_width="match_parent"
        android:layout_height="49.5dp"
        android:drawableRight="@drawable/mine_ic_item_arrow_right"
        android:gravity="center_vertical"
        android:paddingRight="15.5dp"
        android:text="@string/mine_use_permission"
        android:textColor="@color/setting_item_left_color"
        android:textSize="@dimen/text_size_17"
        />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:background="@color/white_ffffff"
      android:divider="@drawable/mine_user_divider_line"
      android:orientation="vertical"
      android:paddingLeft="19dp"
      android:showDividers="middle"
      >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50.5dp"
        android:drawableRight="@drawable/mine_ic_item_arrow_right"
        android:gravity="center_vertical"
        android:paddingRight="15.5dp"
        android:text="新消息通知"
        android:textColor="@color/setting_item_left_color"
        android:textSize="@dimen/text_size_17"
        android:visibility="gone"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50.5dp"
        android:background="@drawable/mine_selector_item_common"
        android:drawableRight="@drawable/mine_ic_item_arrow_right"
        android:gravity="center_vertical"
        android:paddingRight="15.5dp"
        android:text="语言切换"
        android:textColor="@color/setting_item_left_color"
        android:textSize="@dimen/text_size_17"
        android:visibility="gone"
        />


    <TextView
        android:id="@+id/tv_Opinion"
        android:layout_width="match_parent"
        android:layout_height="50.5dp"
        android:drawableRight="@drawable/mine_ic_item_arrow_right"
        android:gravity="center_vertical"
        android:paddingRight="15.5dp"
        android:text="@string/opinion"
        android:textColor="@color/setting_item_left_color"
        android:textSize="@dimen/text_size_17"
        />
    <LinearLayout
        android:id="@+id/ll_clear_cache"
        android:layout_width="match_parent"
        android:layout_height="50.5dp"
        android:orientation="horizontal"
        >

      <TextView
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:gravity="center_vertical"
          android:paddingRight="15.5dp"
          android:text="清除缓存"
          android:textColor="@color/setting_item_left_color"
          android:textSize="@dimen/text_size_17"
          />

      <TextView
          android:id="@+id/tv_cache_size"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:drawablePadding="@dimen/dp_10"
          android:drawableRight="@drawable/mine_ic_item_arrow_right"
          android:gravity="center_vertical|right"
          android:paddingRight="15.5dp"
          android:text="0KB"
          android:textColor="@color/setting_item_right_color"
          android:textSize="@dimen/text_size_15"
          />


    </LinearLayout>


    <FrameLayout
        android:id="@+id/tv_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="50.5dp"
          android:layout_gravity="left|center"
          android:gravity="center_vertical"
          android:text="关于我们"
          android:textColor="@color/setting_item_left_color"
          android:textSize="@dimen/text_size_17"
          />
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_gravity="right|center"
          android:orientation="horizontal"
          android:gravity="center_vertical"
          >
        <TextView
            android:id="@+id/tv_update_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tv_red_dot"
            android:gravity="center_vertical"
            android:text="@string/mine_no_new_version"
            android:textColor="@color/setting_item_right_color"
            android:textSize="@dimen/text_size_15"
            />
        <ImageView
            android:id="@+id/iv_red_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mine_red_dot"
            android:layout_marginBottom="@dimen/dp_6"
            android:visibility="gone"
            />
        <ImageView
            android:id="@+id/iv_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="15.5dp"
            android:src="@drawable/mine_ic_item_arrow_right"
            />

      </LinearLayout>
    </FrameLayout>

  </LinearLayout>


  <TextView
      android:id="@+id/tv_logout"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginTop="12dp"
      android:background="@color/white_ffffff"
      android:gravity="center"
      android:text="退出登录"
      android:textColor="@color/setting_item_left_color"
      android:textSize="@dimen/text_size_16"
      />
  <TextView
      android:id="@+id/tv_unregister"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginTop="12dp"
      android:background="@color/white_ffffff"
      android:gravity="center"
      android:text="@string/mine_unregister"
      android:textColor="@color/setting_item_left_color"
      android:textSize="@dimen/text_size_16"
      />
</LinearLayout>